# kosha

./: .gitignore  CLAUDE.md  Getting Started.md  README.md  gen_icon.py  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
docs/: notion-import-plan.md  refactor-plan.md
specs/: SPEC.md  WEEK1.md  WEEK2.md  WEEK3.md  WEEK4.md
src/: app.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  search.rs  watcher.rs
src/lib/: frontmatter.test.ts  frontmatter.ts  tauri.test.ts  tauri.ts
src/lib/components/: CommandPalette.svelte  ConflictModal.svelte  Editor.svelte  Editor.svelte.test.ts  EditorAppState.svelte.test.ts  EditorAppStateHarness.svelte  EditorTestHarness.svelte  Sidebar.svelte  StatusBar.svelte
src/lib/editor/: context.ts  decorations.ts  setup.test.ts  setup.ts
src/lib/stores/: app.svelte.ts  app.test.ts
src/mocks/: app-environment.ts
src/routes/: +layout.svelte  +page.svelte  page-layout.test.ts
